app/assets/stylesheets/bootstrap-custom.css.scss
/* ... */
.drink-list-container {
  margin-top: 118px;
}
.page-header {
  margin: 20px 0 0 0;
  padding: 0 0 10px 0;
  .best-beer-header {
    margin-top: 5px;
    h3 {
      font-size: 28px;
    }
  }
  .updated {
    margin-top: 10px;
    text-align: right;
  }
  h1, h2, h3, h4, h5, h6 {
    margin-top: 0;
  }
}
.filter-button {
  width: 100px;
}
.filter-heading {
  color: #4780b4;
  font-weight: 600;
  margin-bottom: 7px;
}
.filter-options {
  ul {
    padding-left: 0;
    li {
      list-style-type: none;
      font-size: 13px;
      font-weight: normal;
      label {
        font-size: 13px;
        font-weight: normal;
        margin: 0;
      }
      input {
        margin: 0 2.5px !important;
      }
    }
  }
}
.filter-option {
  font-size: 13px;
  font-weight: normal;
  margin-bottom: 5px;
}
.selected {
  a {
    font-weight: 600 !important;
    color: $normal-text !important ;
    text-decoration: none !important;
  }
}
.input-box {
  margin: 0 2.5px !important;
}

.special-tag-text {
  color: #31b0d5; //light, bright blue color
}
.half-bottom-margin {
  margin-bottom: 5px;
}
.half-top-margin {
  margin-top: 5px;
}
.each-beer {
  margin-right: 0;
}
.each-beer-ratings-page {
  margin: 0;
}
.rank-number-area {
  height: 100%;
}
.ranking-number {
  margin-top: 10px;
  vertical-align: middle;
  font-size: 64px;
  font-weight: 600;
  text-align: center;
}
.rewards-info {
  text-align: center;
  .number-earned {
    padding-top: 50px;
    height: 159px;
    vertical-align: middle;
  }
}
.number-to-rewards {
  margin-top: 10px;
  vertical-align: middle;
  font-size: 80px;
  font-weight: 600;
  text-align: center;
}
.special-line {
  margin-top: 10px;
}
.beer-cost-history {
  padding-left: 10px;
  padding-right: 0;
}
.beer-location-info {
  text-align: left;
  h5 {
    font-size: 14px;
  }
}
.user-beer-rating {
  text-align: center;
  background: #f7f7f7;
}
.star-rating {
  display: inline-block;
  text-align: right;
  margin: 10px 0 5px 0;
}
.beer-rating {
  margin: 0;
  text-align: left;
  display: inline-block;
  font-size: 13px;
}
.brewery-name {
  margin-top: 0;
}
.admin-multiple-checkboxes {
  float: right;
  margin-left: 10px !important;
}
.rating-count {
  display: inline-block;
  span {
    font-size: 14px;
  }
}
.number-ratings {
  margin-top: 0;
}
.descriptor-row {
  div:first-of-type {
    padding-right: 0;
  }
}
.descriptor-text-container {
  padding: 0 5px;
}
.descriptor-text {
  background: $light-gray;
  color: #fff;
  border-radius: 6px;
  padding: 5px 7.5px;
  text-align: center;
  display: inline-block;
}
.space-bar {
  text-indent: 5px;
}
.beer-rating-info-2 {
  margin-left: -10px;
}
.beer-locations {
  width: 512px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  padding-left: 0;
}
.ratings-row {
  margin-top: 5px;
}
.special-info {
  text-align: left;
  padding-left: 10px;
  display: inline-block;
  margin-bottom: 5px;
}
.drink-button-holder {
  text-align: left;
}
.drink-button-holder-rl {
  text-align: left;
  padding-left: 35px;
}
.buy-button {
  width: 120px; 
  font-size: 16px;
  font-weight: 500;
  margin-left: 25px;
}
.buy-button.final {
  margin-top: 10px;
}
.buy-steps {
  background: #4780b4;
  color: #fff;
  border-radius: 50%;
  width: 30px;
  height: 30px;
  padding: 5px;
  text-align: center;
  vertical-align: center;
  display: inline-block;
}
.buy-step-direction {
  display: inline-block;
}
.beer-rating-directions {
  text-align: right;
  padding-right: 0;
}
.beer-rating-input {
  text-align: left;
  i:hover {
    color: $best-guess-text;
  }
}
.rating-descriptor-field {
  width: 90%;
  height: 70px;
}
.drop-down-container {
  .chosen-container {
    margin-top: 10px;
  }
}
.add-drink-button, .remove-drink-button, .wait-button {
  width: 120px; 
  font-size: 16px;
  font-weight: 500;
  margin-top: -5px;
}
.alt-name {
  float: left;
}
.rate-button {
  width: 120px; 
  font-size: 16px;
  font-weight: 500;
  margin-top: -5px;
}
.beers-earned {
  i {
    margin: 0 5px;
   }
}

//Navbar css style
// first one is for navbar on index page
#index_homeNavbar {
  background: transparent !important;
  border-color: transparent !important;
  position: absolute;
  top: 0;
  width: 100%;
  z-index: 9999;
  ul {
    li {
      a {
        padding: 6px 12px !important;
      }
    }
  }
}
.formButton-home-login-button {
  width: 100%;
  margin-top: 15px;
  background: transparent;
  border-color: #4cae4c !important;
}
.formButton-home-login-button:hover {
  width: 100%;
  margin-top: 15px;
  background: $user-action !important;
  border-color: #4cae4c !important;
}
.homeNavbar {
  background: transparent !important;
  border-color: transparent !important;
  z-index: 9999;
}
.signup_navbar, .common_navbar {
  background: $dark-gray !important;
  border-color: $dark-gray !important;
  z-index: 9999;
}
.navbar {
  z-index: 9999;
  a {
    color: $white !important;
  }
  .logo {
      font-size: 48px;
      font-family: 'Kreon', serif;
      font-weight: 400;
      text-align: center;
      color: #fff;
      margin-top: 10px;
    }
  .navbar-header {
    a { 
      font-size: 28px;
      font-weight: 400;
      line-height: 1.1;
      padding: 0;
      margin: 5px 0 0 0 !important;
    }
  }
  .navbar-header-home {
    text-align: center !important;
    a { 
      font-size: 36px;
      font-weight: 400;
      line-height: 1.1;
      padding: 0;
      margin: 8px 0 4px 0 !important;
      display: block;
      text-decoration: none;
    }
  }
  .navbar-right {
    a {
      font-weight: 400;
    }
  }
}
.btn.formButton-home-header-get-started-button {
  width: 100%;
  margin: 12.5px 0 0 30px !important;
  background: transparent;
  border-color: #4cae4c !important;
  color: #4cae4c !important;
}
.btn.formButton-home-header-get-started-button:hover {
  width: 100%;
  margin-top: 7.5px;
  background: $user-action !important;
  border-color: #4cae4c !important;
  color: $white !important;
}
/* ... */

